Fix autoload psr-4 src

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "LaravelTrailingSlash": "src/"
+            "LaravelTrailingSlash\\": "src/"
         }
     },
     "minimum-stability": "dev"
