--- a/src/.htaccess
+++ b/src/.htaccess
@@ -5,8 +5,9 @@
 
     RewriteEngine On
 
-    # Redirect To Trailing Slashes If Not A Folder...
+    # Redirect To Trailing Slashes If Not A Folder Or A File...
     RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_URI} !(/$|\.) 
     RewriteRule (.*) %{REQUEST_URI}/ [R=301,L] 
     
