--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "~5.3"
+        "illuminate/routing": "5.*"
     },
     "autoload": {
         "psr-4": {
