Add Laravel 5.5 Package Auto Discovery

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
             "LaravelTrailingSlash\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "LaravelTrailingSlash\\RoutingServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "dev"
 }
