--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,18 @@
     "require": {
         "illuminate/routing": "5.*"
     },
+    "require-dev": {
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~5.7"
+    },
     "autoload": {
         "psr-4": {
             "LaravelTrailingSlash\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "extra": {
@@ -25,5 +34,6 @@
             ]
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
