--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "illuminate/routing": "5.6.*"
+        "illuminate/routing": "~5.6.0|~5.7.0"
     },
     "require-dev": {
         "mockery/mockery": "~1.0",
