--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "illuminate/routing": "~5.6.0|~5.7.0"
     },
     "require-dev": {
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0"
+        "mockery/mockery": "^1.1",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
