--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": "^7.1.3",
         "illuminate/routing": "5.7.*"
     },
     "require-dev": {
