--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/routing": "5.7.*"
+        "illuminate/routing": "5.7.*|5.8.*"
     },
     "require-dev": {
         "mockery/mockery": "~1.0",
