--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/routing": "5.7.*|5.8.*|6.0.*"
+        "illuminate/routing": "6.*"
     },
     "require-dev": {
-        "mockery/mockery": "^1.1",
-        "phpunit/phpunit": "^8.0"
+        "mockery/mockery": "^1.2.3",
+        "phpunit/phpunit": "^8.3"
     },
     "autoload": {
         "psr-4": {
