--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "fsasvari/laravel-trailing-slash",
-    "description": "Adds redirection with trailing slash in Laravel.",
+    "description": "The package that adds redirection with trailing slash to Laravel framework.",
     "keywords": ["redirect", "laravel", "php"],
     "license": "MIT",
     "homepage": "https://github.com/fsasvari/laravel-trailing-slash",
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "illuminate/routing": "7.*"
+        "php": "^7.3|^8.0",
+        "illuminate/routing": "8.*"
     },
     "require-dev": {
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.0"
+        "mockery/mockery": "^1.4.2",
+        "phpunit/phpunit": "^9.4.3"
     },
     "autoload": {
         "psr-4": {
