--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/routing": "8.*"
+        "illuminate/routing": "^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.2",
