Add PHPlinter to project

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "illuminate/routing": "^10.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.4.4",
+        "mockery/mockery": "^1.5",
+        "overtrue/phplint": "^5.5",
         "phpunit/phpunit": "^10.0"
     },
     "autoload": {
